# wjr2

./: CMakeCache.txt  CMakeLists.txt  LICENSE  Makefile  README.md  a.h  cmake_install.cmake  main.cpp  main.rs  test.wat  wjr
include/wjr/: atomic.hpp  type_traits.hpp
include/wjr/asm/: asm.h
include/wjr/container/: list.hpp
include/wjr/preprocessor/: arithmatic.hpp  extend.hpp
include/wjr/preprocessor/compiler/: arch.hpp  attribute.hpp  compiler.hpp  has.hpp
include/wjr/preprocessor/details/: basic.hpp  repeat.hpp
include/wjr/preprocessor/logical/: basic.hpp
include/wjr/preprocessor/queue/: basic.hpp  call.hpp
src/: CMakeLists.txt  main.cpp
